--- a/HumphreyJ.NetCore.MKHX.Web/Views/About/Index.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/About/Index.cshtml
@@ -9,8 +9,8 @@
     <article class="pt-3">
 
         <ul>
-            <li><a target="_blank" href="https://github.com/tlos142857/HumphreyJ.Netcore.MKHX">GitHub项目地址</a></li>
-            <li><a target="_blank" href="https://github.com/tlos142857/HumphreyJ.Netcore.MKHX/commits/master">主线版本更新记录</a></li>
+            <li><a target="_blank" href="https://github.com/HumJ0218/HumphreyJ.Netcore.MKHX">GitHub项目地址</a></li>
+            <li><a target="_blank" href="https://github.com/HumJ0218/HumphreyJ.Netcore.MKHX/commits/master">主线版本更新记录</a></li>
         </ul>
 
     </article>
