--- a/HumphreyJ.NetCore.MKHX.Web/Views/Home/Index.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="alert alert-info" role="alert">
             <p>这是一个未完成的版本，内容可能会随时更改。</p>
-            <p>如果你发现了什么问题，欢迎到 <a href="https://github.com/tlos142857/HumphreyJ.Netcore.MKHX/issues">报错/反馈</a> 模块进行反馈</p>
+            <p>如果你发现了什么问题，欢迎到 <a href="https://github.com/HumJ0218/HumphreyJ.Netcore.MKHX/issues">报错/反馈</a> 模块进行反馈</p>
         </div>
         @if ((Context.Request.Headers["User-Agent"] + "").ToLower().Contains("edge/"))
         {
@@ -81,7 +81,7 @@
                             var title = li.find('.h4').text().trim();
                             var user = li.find('.muted-link').text().trim();
                             var time = new Date(li.find('relative-time').attr('datetime'));
-                            user = user == 'tlos142857' ? '汉弗莱基斯' : user;
+                            user = user == 'HumJ0218' ? '汉弗莱基斯' : user;
 
                             var a = $(template).attr('target', '_blank').attr('href', link);
                             a.find('.issue-title').text(title);
