优化枚举读取

--- a/HumphreyJ.NetCore.MKHX.Web/Views/RuneData/detail.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/RuneData/detail.cshtml
@@ -9,7 +9,7 @@
     var RuneProperty = EnumAccesser.RuneProperty.ToDictionary(m => m.Key, m => m.Value.Name);
     var RuneSkillConditionSlide = EnumAccesser.RuneSkillConditionSlide.ToDictionary(m => m.Key, m => m.Value.Name);
     var RuneSkillConditionType = EnumAccesser.RuneSkillConditionType.ToDictionary(m => m.Key, m => m.Value.Name);
-    var SkillConditionCompare = EnumAccesser.SkillConditionCompare.ToDictionary(m => m.Key, m => m.Value.Name);
+    var SkillConditionCompare = EnumAccesser.RuneSkillConditionCompare.ToDictionary(m => m.Key, m => m.Value.Name);
     var RuneFragmentColor = EnumAccesser.RuneFragmentColor.ToDictionary(m => m.Key, m => m.Value.Name);
 
     var FragmentText = Model.Fragment > 0 ?
